--- a/app/views/users/register.erb
+++ b/app/views/users/register.erb
@@ -1,1 +1,9 @@
 <h1>New User Registration</h1>
+
+<form action="/register" method="POST">
+    <label>Username: <input type="text" id="username" name="username"></label>
+    <label>Email: <input type="text" id="email" name="email"></label>
+    <label>Password: <input type="text" id="password" name="password"></label>
+
+    <input type="submit">
+</form>
