--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,5 +12,5 @@
 <%end%>
 
 
-<h3>What games our users have been adding to their libraries:</h3>
+<h3>What games our users have been adding to their libraries lately:</h3>
 Fill me out later!
