Add entries to create a new game

--- a/app/views/games/new.erb
+++ b/app/views/games/new.erb
@@ -1,1 +1,16 @@
 <h1>New Game</h1>
+<a href='/'>Home</a>
+<a href=<%'/users/'+@user.id.to_s%>>Profile</a>
+<a href='/games'>Back to Games</a>
+<br><br>
+
+<form action="/games" method="POST">
+    <label>Title: <br><input id="title" type="text" name="title"></label><br><br>
+    <label>Description: <br><input id="description" type="text" name="description"></label><br><br>
+    <label>Genre: <br><input id="genre" type="text" name="genre"></label><br><br>
+    <label>Platform: <br><input id="platform" type="text" name="platform"></label><br><br>
+    <label>Developer: <br><input id="developer" type="text" name="developer"></label><br><br>
+    <label>Publisher: <br><input id="publisher" type="text" name="publisher"></label><br><br>
+    
+    <input type="submit">
+</form>
