--- a/app/views/users/account_info.erb
+++ b/app/views/users/account_info.erb
@@ -1,4 +1,14 @@
 <h1><%=@user.username%>'s Collection</h1>
+<a href='/'>Home</a><br><br>
 
-Games:<br>
-add me when you can make new games!
+<h2>Games:</h2>
+<%@user.games.each do |game|%>
+    <h2><%=game.title%></h2>
+    <%if !game.developer.empty?%>
+        <h4><%="By " + game.developer%></h4><br>
+    <%end%>
+    <%if !game.description.empty?%>
+        <label><%=game.description if !game.description.empty?%></label><br><br>
+    <%end%>
+    <a href=<%="/games/"+game.id.to_s%>>More Info</a><br><br>
+<%end%>
