Fix showing the publisher instead of developer in the publisher label

--- a/app/views/games/game.erb
+++ b/app/views/games/game.erb
@@ -11,7 +11,7 @@
 
 <label>Platform: <%=@game.platform%></label><br>
 
-<label>Publisher: <%=@game.developer%></label><br>
+<label>Publisher: <%=@game.publisher%></label><br>
 <br>
 
 <label>Added by: </label>
