Fix link to add a console

--- a/app/views/consoles/users_consoles.erb
+++ b/app/views/consoles/users_consoles.erb
@@ -1,6 +1,6 @@
 <h1>Your Console Collection Control Panel</h1>
 <a href="/">Home</a>
-<a href="/games/new">Add a Console</a>
+<a href="/console/new">Add a Console</a>
 <br><br>
 
 <%if @user.consoles.empty?%>
