--- a/app/views/consoles/users_consoles.erb
+++ b/app/views/consoles/users_consoles.erb
@@ -1,6 +1,6 @@
 <h1>Your Console Collection Control Panel</h1>
 <a href="/">Home</a>
-<a href="/console/new">Add a Console</a>
+<a href="/consoles/new">Add a Console</a>
 <br><br>
 
 <%if @user.consoles.empty?%>
@@ -11,7 +11,7 @@
         <%if !console.company.empty?%>
             <h4><%=console.company%></h4><br>
         <%end%>
-        <a href=<%="/console/"+game.id.to_s%>>More Info</a>
+        <a href=<%="/consoles/"+console.id.to_s%>>More Info</a>
         <br><br>
     <%end%>
 <%end%>
