Add view for user to edit the console of the game

--- a/app/views/games/edit.erb
+++ b/app/views/games/edit.erb
@@ -5,9 +5,15 @@
     <label>Title: <input type="text" name="title" value='<%=@game.title%>'></label><br>
     <label>Description: <input type="text" name="description" value='<%=@game.description%>'></label><br>
     <label>Genre: <input type="text" name="genre" value='<%=@game.genre%>'></label><br>
-    <label>Platform: <input type="text" name="platform" value='<%=@game.platform%>'></label><br>
     <label>Developer: <input type="text" name="developer" value='<%=@game.developer%>'></label><br>
     <label>Publisher: <input type="text" name="publisher" value='<%=@game.publisher%>'></label><br>
+
+    <%if !@user.consoles.empty?%>
+        <label>Please select a console that this game is on:</label><br>
+        <%@user.consoles.each do |console|%>
+            <input type="radio" name=<%="console["+console.id.to_s+"]"%> value=<%="on" if @game.console == console%>> <%=console.name%><br>
+        <%end%>
+    <%end%>
 
     <input type="submit">
 </form>
