Change platform info to now display console info

--- a/app/views/games/game.erb
+++ b/app/views/games/game.erb
@@ -9,7 +9,7 @@
 <br>
 <label>Genre: <%=@game.genre%></label><br>
 
-<label>Platform: <%=@game.platform%></label><br>
+<label>Console: <%=@game.console.name%></label><br>
 
 <label>Publisher: <%=@game.publisher%></label><br>
 <br>
