--- a/app/views/consoles/new.erb
+++ b/app/views/consoles/new.erb
@@ -1,6 +1,6 @@
 <h1>New Console</h1>
 <a href='/'>Home</a>
-<a href=<%'/users/'+@user.id.to_s%>>Profile</a>
+<a href=<%='/users/'+@user.id.to_s%>>Profile</a>
 <a href='/consoles'>Back to Consoles</a>
 <br><br>
 
