--- a/app/views/games/new.erb
+++ b/app/views/games/new.erb
@@ -1,6 +1,6 @@
 <h1>New Game</h1>
 <a href='/'>Home</a>
-<a href=<%'/users/'+@user.id.to_s%>>Profile</a>
+<a href=<%='/users/'+@user.id.to_s%>>Profile</a>
 <a href='/games'>Back to Games</a>
 <br><br>
 
