--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,7 +7,8 @@
     <a href="/register">Register</a>
     <br><br>
 <%else%>
-    <a href=<%="/games"%>>Your Games</a>
+    <a href=<%="/games"%>>Games</a>
+    <a href=<%="/consoles"%>>Consoles</a>
     <a href=<%="/users/"+session[:user_id].to_s%>>Profile</a>
     <a href="/logout">Logout</a>
     <br><br>
