--- a/app/views/users/register.erb
+++ b/app/views/users/register.erb
@@ -3,7 +3,7 @@
 <form action="/register" method="POST">
     <label>Username: <input type="text" id="username" name="username"></label><br>
     <label>Email: <input type="text" id="email" name="email"></label><br>
-    <label>Password: <input type="text" id="password" name="password"></label><br>
+    <label>Password: <input type="password" id="password" name="password"></label><br>
 
     <input type="submit">
 </form>
