No longer shows console if no console is assigned

--- a/app/views/games/game.erb
+++ b/app/views/games/game.erb
@@ -9,7 +9,9 @@
 <br>
 <label>Genre: <%=@game.genre%></label><br>
 
-<label>Console: <%=@game.console.name%></label><br>
+<%if !@game.console.nil?%>
+    <label>Console: <%=@game.console.name%></label><br>
+<%end%>
 
 <label>Publisher: <%=@game.publisher%></label><br>
 <br>
