Fix text not showing next to radio buttons

--- a/app/views/games/new.erb
+++ b/app/views/games/new.erb
@@ -14,7 +14,7 @@
     <%if !@user.consoles.empty?%>
         <label>Please select a console that this game is on:</label><br>
         <%@user.consoles.each do |console|%>
-            <input type="radio" name=<%="console"%> value="<%=console.id.to_s%>"> <%=console.name%><br>
+            <input type="radio" id="<%=console.id.to_s%>"name="console" value="<%=console.id.to_s%>"><label for="<%=console.id.to_s%>"> <%=console.name%></label><br>
         <%end%>
     <%end%>
     
