Display game creator instead of logged in user

--- a/app/views/games/game.erb
+++ b/app/views/games/game.erb
@@ -17,7 +17,7 @@
 <br>
 
 <label>Added by: </label>
-<a href=<%="/users/"+@user.id.to_s%>><%=@user.username%></a><br>
+<a href=<%="/users/"+@game_creator.id.to_s%>><%=@game_creator.username%></a><br>
 
 <br>
 
